ingress-svc/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.jcloudcodes.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80

#kubectl apply -f argocd-ingress.yaml
#kubectl -n argocd get secret argocd-initial-admin-secret \
#  -o jsonpath="{.data.password}" | base64 -d; echo
