ingress-svc/mss-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mss-dev-ingress
  namespace: mss-dev
spec:
  ingressClassName: nginx
  rules:
    - host: mss-dev.jcloudcodes.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jcloud-springboot-aks-app
                port:
                  number: 80
